examples/test/testpolicy9247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9247
  namespace: namespace183
spec:
  podSelector:
    matchLabels:
      key22: value9
      key5: value26
      key38: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value12
          key34: value23
          key28: value41
      podSelector:
        matchLabels:
          key15: value11
